#1316: fixed List item misalignment issue

--- a/scss/components/side-nav.scss
+++ b/scss/components/side-nav.scss
@@ -100,7 +100,8 @@ $block: #{$fd-namespace}-side-nav;
     }
 
     &__link {
-
+        display: flex;
+        align-items: center;
         //STATES *******************************************
         &.has-child {
             background-image: url(#{$fd-down-arrow-icon});
